package com.qr_restaurant.menu.web.dtos.responses.common;

public record MenuCatalogueDto(String id, String name, String description) {
}
